P6-146 Added missing messenger adapter api jar to distribution

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -240,6 +240,7 @@
                     <attach>true</attach>
                     <classifier>app</classifier>
                     <layout>JAR</layout>
+                    <includeSystemScope>true</includeSystemScope>
                     <excludes>
                         <exclude>
                             <groupId>org.springframework.boot</groupId>
