--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -1,3 +1,7 @@
 {
-  "companyName": "Development"
+  "company": "DCSA",
+  "senderRole": "CARRIER",
+  "senderIdType": "SMDG_LINER_CODE",
+  "senderId": "EXP"
 }
+
