P6-138 adjusting interface to accept refined tansportCalls

--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -2,6 +2,6 @@
   "company": "DCSA",
   "publisherRole": "CA",
   "publisher": "EXP",
-  "publisherCodeType": "SMDG_LINER_CODE"
+  "publisherCodeType": "SMDG"
 }
 
