--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ jobs:
           servers: '[{ "id": "dcsa-p6", "username": "${{ secrets.DCSA_USER }}", "password": "${{ secrets.DCSA_PACKAGES_PAT }}" }]'
       - name: Compile and test
         run: mvn -B package
-      - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v1
-        with:
-          report_paths: '**/surefire-reports/TEST-*.xml'
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Publish Test Report
+#        uses: mikepenz/action-junit-report@v1
+#        with:
+#          report_paths: '**/surefire-reports/TEST-*.xml'
+#          github_token: ${{ secrets.GITHUB_TOKEN }}
