--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -14,10 +14,15 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
+  /*  "noImplicitAny": true,*/
     "lib": [
       "es2018",
       "dom"
     ]
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true,
+    "strictInjectionParameters": true
   },
   "exclude": [
     "./src/assets/config.json"
