--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build Docker image
         run:
-          docker-compose up --build --no-start
+          cd ui && docker-compose up --build --no-start
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
