--- a/ui/nginx.d/default.conf.template
+++ b/ui/nginx.d/default.conf.template
@@ -20,23 +20,24 @@ server {
         root   /usr/share/nginx/html;
     }
 
-    location /api/ovs {
-        proxy_pass http://${ovs_backend};
+
+    location ~* /api(/unofficial/.*) {
+        proxy_pass ${ui_support_backend}$1;
         proxy_set_header Host localhost;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto "https";
-        proxy_set_header X-Forwarded-Host "${ovs_backend}";
+        proxy_set_header X-Forwarded-Host "${ui_support_backend}";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
     }
 
-    location /api/unofficial-ui-support {
-        proxy_pass http://${ui_support_backend};
+    location ~* /api(/.*) {
+        proxy_pass ${ovs_backend}$1;
         proxy_set_header Host localhost;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto "https";
-        proxy_set_header X-Forwarded-Host "${ui_support_backend}";
+        proxy_set_header X-Forwarded-Host "${ovs_backend}";
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
