Docker: Install assets in correct directory
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -4,5 +4,6 @@ ENV server_name localhost
 ENV ovs_backend http://127.0.0.1:9090/v2
 ENV ui_support_backend http://127.0.0.1:9091/v1
 
-COPY dist/ui/* /usr/share/nginx/html/
+COPY dist/ui/*.* /usr/share/nginx/html/
+COPY dist/ui/assets /usr/share/nginx/html/assets
 COPY nginx.d/*.template /etc/nginx/templates/
