allow common-js dependencies
- Done to remove warnings related to common-js dependencies.
- Mainly caused by imports used in Cognito libary

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -34,7 +34,13 @@
               "node_modules/primeng/resources/primeng.min.css",
               "DCSA-Theme.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "buffer",
+              "crypto-js",
+              "js-cookie",
+              "isomorphic-unfetch"
+            ]
           },
           "configurations": {
             "production": {
