fixed support for IANA timezones

--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,8 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "amazon-cognito-identity-js": "^5.1.0",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.33",
     "prime": "^0.5.0",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
@@ -38,7 +40,7 @@
     "@angular/localize": "^10.1.5",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.24",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
