allow commmonjs 'moment-timezone'
- to supress angular warning

--- a/ui/angular.json
+++ b/ui/angular.json
@@ -39,7 +39,8 @@
               "buffer",
               "crypto-js",
               "js-cookie",
-              "isomorphic-unfetch"
+              "isomorphic-unfetch",
+              "moment-timezone"
             ]
           },
           "configurations": {
