updated timestamp mapping service with new cases

--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -24,7 +24,7 @@
     ],
     "nmftaCode" : "CSK"
   },
-  "publisherRole": "TR",
+  "publisherRole": "TWG",
   "uiSupportBackendURL": "http://localhost:9091/v1",
   "ovsBackendURL": "http://localhost:9090/v2",
   "cognitoUserPoolId": "eu-west-1_rJGpA7BVH",
