--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -27,7 +27,7 @@
   "publisherRole": "TR",
   "uiSupportBackendURL": "http://localhost:9091/v1",
   "ovsBackendURL": "http://localhost:9090/v2",
-  "cognitoUserPoolId": "eu-west-1_rJGpA7BVH",
-  "cognitoAppClientId": "3bdgnq3ihck83j6pkl36ccdker"
+  "cognitoUserPoolId": "eu-west-1_LsLTYEjn5",
+  "cognitoAppClientId": "4u49pjh38su1ccea0l4dras9if"
 }
 
