--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -28,6 +28,7 @@
   "uiSupportBackendURL": "http://localhost:9091/v1",
   "ovsBackendURL": "http://localhost:9090/v2",
   "cognitoUserPoolId": "eu-west-1_LsLTYEjn5",
-  "cognitoAppClientId": "4u49pjh38su1ccea0l4dras9if"
+  "cognitoAppClientId": "4u49pjh38su1ccea0l4dras9if",
+  "enableJIT11Timestamps" :true
 }
 
