--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -1,7 +1,7 @@
 {
   "id": "be5bc290-7bac-48bb-a211-f3fa5a3ab3ae",
   "company": "DCSA",
-    "publisher": {
+  "publisher": {
     "partyName": "Asseco Denmark",
     "taxReference1": "CVR-25645774",
     "taxReference2": "CVR-25645774",
@@ -22,9 +22,10 @@
         "partyCode": "MSK"
       }
     ],
-    "nmftaCode" : "CSK"
+    "nmftaCode": "CSK"
   },
   "publisherRole": "TR",
+  "enableVesselPositions": true,
   "uiSupportBackendURL": "http://localhost:9091/v1",
   "ovsBackendURL": "http://localhost:9090/v2",
   "dateTimeFormat": "dd MMM yyyy HH:mm",
