--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -24,13 +24,13 @@
     ],
     "nmftaCode": "CSK"
   },
-  "publisherRole": "TR",
-  "enableVesselPositions": true,
+  "publisherRole": "CA",
   "uiSupportBackendURL": "http://localhost:9091/v1",
   "ovsBackendURL": "http://localhost:9090/v2",
   "dateTimeFormat": "dd MMM yyyy HH:mm",
   "cognitoUserPoolId": "eu-west-1_LsLTYEjn5",
   "cognitoAppClientId": "4u49pjh38su1ccea0l4dras9if",
-  "enableJIT11Timestamps" :true
+  "enableJIT11Timestamps" :true,
+  "enableVesselPositions": true
 }
 
