Generate separate images for Hamburg and Signapore
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,6 +9,8 @@ on:
   push:
     branches:
       - master
+      - live-hamburg
+      - live-singapore
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -26,6 +28,11 @@ jobs:
       packages: write
 
     steps:
+      - name: Branch name
+        run: |-
+          tag_name=$(echo "${GITHUB_REF}" | sed 's/.*\///g; s/master/latest/')
+          echo DOCKER_TAG_NAME=${tag_name}
+          echo DOCKER_TAG_NAME=${tag_name} >> $GITHUB_ENV
       - name: Checkout repository
         uses: actions/checkout@v2
 
@@ -65,7 +72,7 @@ jobs:
           echo "tags > ${{ steps.meta.outputs.tags }}"
 
       - name: tag
-        run: docker tag ui_dcsa-p6-ui ghcr.io/dcsaorg/dcsa-p6-ui:latest
+        run: docker tag ui_dcsa-p6-ui ghcr.io/dcsaorg/dcsa-p6-ui:${{ env.DOCKER_TAG_NAME }}
 
       - name: push
-        run: docker push ghcr.io/dcsaorg/dcsa-p6-ui:latest
+        run: docker push ghcr.io/dcsaorg/dcsa-p6-ui:${{ env.DOCKER_TAG_NAME }}
