Support having multiple publisher roles at the same time
Since the timestamp definition tells us which publisher role a
timestamp should have, then we can easily have multiple publisher
roles at the same time.

This also enables us to activate *all* publisher allowing users to
play with all "hats" at the same time (and therefore answer their own
timestamps), which is help for development or educational purposes.

Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -24,7 +24,7 @@
     ],
     "nmftaCode": "CSK"
   },
-  "publisherRole": "CA",
+  "publisherRoles": ["CA", "AG", "VSL", "TR", "ATH", "PLT", "TWG", "BUK", "LSH"],
   "uiSupportBackendURL": "http://localhost:9091/v1",
   "ovsBackendURL": "http://localhost:9090/v2",
   "dateTimeFormat": "dd MMM yyyy HH:mm",
