angular refresh bug fixed and more
- refresh bug fixed
- authRedirectUriSignIn added as an option for auth
- logout button hidden when auth is off.

--- a/ui/src/assets/config.json
+++ b/ui/src/assets/config.json
@@ -35,6 +35,7 @@
   "authRegion":"eu-west-1",
   "authUserPoolId":"eu-west-1_NBK1wfoF6",
   "authUserPoolWebClientId":"ebnoenk5n4fi9q4bku3r2n5ed",
-  "authMandatorySignIn":true
+  "authMandatorySignIn":true,
+  "authRedirectUriSignIn":"/dashboard"
 }
 
