--- a/ui/package.json
+++ b/ui/package.json
@@ -31,7 +31,7 @@
     "primeicons": "4.0.0",
     "primeng": "11.2.3",
     "rxjs": "6.6.0",
-    "tslib": "^2.0.0",
+    "tslib": "^2.4.0",
     "zone.js": "0.10.2"
   },
   "devDependencies": {
@@ -42,14 +42,14 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "12.20.24",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^6.0.2",
     "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "jasmine-spec-reporter": "^5.0.2",
     "karma": "6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "^4.0.2",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "7.0.0",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
