--- a/ui/package.json
+++ b/ui/package.json
@@ -12,7 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "14.0.2",
-    "@angular/cdk": "13.3.9",
+    "@angular/cdk": "14.0.2",
     "@angular/common": "14.0.2",
     "@angular/compiler": "14.0.2",
     "@angular/core": "14.0.2",
@@ -31,25 +31,25 @@
     "primeicons": "4.0.0",
     "primeng": "11.2.3",
     "rxjs": "6.6.0",
-    "tslib": "^2.4.0",
-    "zone.js": "~0.11.4"
+    "tslib": "2.4.0",
+    "zone.js": "0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "14.0.2",
     "@angular/cli": "14.0.2",
     "@angular/compiler-cli": "14.0.2",
     "@angular/localize": "14.0.2",
-    "@types/jasmine": "~3.6.0",
+    "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "12.20.24",
-    "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "^5.0.2",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.2",
     "karma": "6.4.0",
-    "karma-chrome-launcher": "^3.1.1",
+    "karma-chrome-launcher": "3.1.1",
     "karma-coverage-istanbul-reporter": "3.0.2",
-    "karma-jasmine": "^4.0.2",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "4.0.2",
+    "karma-jasmine-html-reporter": "1.7.0",
     "protractor": "7.0.0",
     "ts-node": "8.3.0",
     "tslint": "6.1.0",
