--- a/ui/package.json
+++ b/ui/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "start": "ng serve  --max_old_space_size=2192 ./node_modules/@angular/cli/bin/ng build --proxy-config proxy.conf.json",
+    "build": "ng build --max_old_space_size=2192 ./node_modules/@angular/cli/bin/ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -36,13 +36,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "14.0.2",
+    "@angular-eslint/eslint-plugin": "^13.5.0",
+    "@angular-eslint/eslint-plugin-template": "^13.5.0",
     "@angular/cli": "14.0.2",
     "@angular/compiler-cli": "14.0.2",
     "@angular/localize": "14.0.2",
     "@types/jasmine": "3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/node": "12.20.24",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "codelyzer": "6.0.2",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "jasmine-core": "3.6.0",
     "jasmine-spec-reporter": "5.0.2",
     "karma": "6.4.0",
