--- a/ui/package.json
+++ b/ui/package.json
@@ -11,15 +11,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.1.6",
+    "@angular/animations": "^11.2.14",
     "@angular/cdk": "^10.2.7",
-    "@angular/common": "^10.1.6",
-    "@angular/compiler": "^10.1.6",
-    "@angular/core": "^10.1.6",
-    "@angular/forms": "^10.1.6",
-    "@angular/platform-browser": "^10.1.6",
-    "@angular/platform-browser-dynamic": "^10.1.6",
-    "@angular/router": "^10.1.6",
+    "@angular/common": "^11.2.14",
+    "@angular/compiler": "^11.2.14",
+    "@angular/core": "^11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/platform-browser": "^11.2.14",
+    "@angular/platform-browser-dynamic": "^11.2.14",
+    "@angular/router": "^11.2.14",
     "@aws-amplify/ui-angular": "^1.0.35",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -31,25 +31,25 @@
     "primeicons": "^4.1.0",
     "primeng": "^11.4.5",
     "rxjs": "^6.6.7",
-    "tslib": "^2.4.0",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1001.7",
-    "@angular/cli": "^10.1.7",
-    "@angular/compiler-cli": "^10.1.6",
-    "@angular/localize": "^10.2.5",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.1102.19",
+    "@angular/cli": "^11.2.19",
+    "@angular/compiler-cli": "^11.2.14",
+    "@angular/localize": "^11.2.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.20.55",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "^6.4.0",
-    "karma-chrome-launcher": "^3.1.1",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "^4.0.2",
-    "karma-jasmine-html-reporter": "^1.7.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
