--- a/package.json
+++ b/package.json
@@ -11,48 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.2.14",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "^11.2.14",
-    "@angular/compiler": "^11.2.14",
-    "@angular/core": "^11.2.14",
-    "@angular/forms": "^11.2.14",
-    "@angular/platform-browser": "^11.2.14",
-    "@angular/platform-browser-dynamic": "^11.2.14",
-    "@angular/router": "^11.2.14",
-    "@aws-amplify/ui-angular": "^1.0.35",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
-    "aws-amplify": "^4.3.26",
-    "moment": "^2.29.3",
-    "moment-timezone": "^0.5.34",
-    "prime": "^0.5.0",
-    "primeflex": "^2.0.0",
-    "primeicons": "^4.1.0",
-    "primeng": "^11.4.5",
-    "rxjs": "^6.6.7",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "11.2.14",
+    "@angular/cdk": "10.2.7",
+    "@angular/common": "11.2.14",
+    "@angular/compiler": "11.2.14",
+    "@angular/core": "11.2.14",
+    "@angular/forms": "11.2.14",
+    "@angular/platform-browser": "11.2.14",
+    "@angular/platform-browser-dynamic": "11.2.14",
+    "@angular/router": "11.2.14",
+    "@aws-amplify/ui-angular": "1.0.35",
+    "@ngx-translate/core": "13.0.0",
+    "@ngx-translate/http-loader": "6.0.0",
+    "aws-amplify": "4.3.26",
+    "moment": "2.29.3",
+    "moment-timezone": "0.5.34",
+    "prime": "0.5.0",
+    "primeflex": "2.0.0",
+    "primeicons": "4.1.0",
+    "primeng": "11.4.5",
+    "rxjs": "6.6.7",
+    "tslib": "2.0.0",
+    "zone.js": "0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1102.19",
-    "@angular/cli": "^11.2.19",
-    "@angular/compiler-cli": "^11.2.14",
-    "@angular/localize": "^11.2.14",
-    "@types/jasmine": "~3.6.0",
-    "@types/jasminewd2": "^2.0.10",
-    "@types/node": "^12.20.55",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "^4.0.8"
+    "@angular-devkit/build-angular": "0.1102.19",
+    "@angular/cli": "11.2.19",
+    "@angular/compiler-cli": "11.2.14",
+    "@angular/localize": "11.2.14",
+    "@types/jasmine": "3.6.0",
+    "@types/jasminewd2": "2.0.10",
+    "@types/node": "12.20.55",
+    "codelyzer": "6.0.0",
+    "jasmine-core": "3.6.0",
+    "jasmine-spec-reporter": "5.0.0",
+    "karma": "6.4.0",
+    "karma-chrome-launcher": "3.1.0",
+    "karma-coverage-istanbul-reporter": "3.0.2",
+    "karma-jasmine": "4.0.0",
+    "karma-jasmine-html-reporter": "1.5.0",
+    "protractor": "7.0.0",
+    "ts-node": "8.3.0",
+    "tslint": "6.1.0",
+    "typescript": "4.0.8"
   }
 }
