--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -18,7 +18,7 @@
     },
     "identifyingCodes": [
       {
-        "codeListResponsibleAgencyCode": "306",
+        "DCSAResponsibleAgencyCode": "SMDG",
         "partyCode": "MSK"
       }
     ],
