--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,9 +1,4 @@
-name: Docker
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
+name: Publish Docker image
 
 on:
   push:
@@ -27,28 +22,37 @@ jobs:
       packages: write
 
     steps:
+
       - name: Branch name
         run: |-
           tag_name=$(echo "${GITHUB_REF}" | sed 's/.*\///g; s/master/latest/')
           echo DOCKER_TAG_NAME=${tag_name}
           echo DOCKER_TAG_NAME=${tag_name} >> $GITHUB_ENV
+
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Set up JDK
-        uses: actions/setup-java@v1
+      - name: Cache node modules
+        uses: actions/cache@v1
         with:
-          java-version: 11
-      - name: Configure maven settings
-        uses: whelk-io/maven-settings-xml-action@v14
-        with:
-          servers: '[{ "id": "dcsa-p6", "username": "${{ secrets.DCSA_USER }}", "password": "${{ secrets.DCSA_PACKAGES_PAT }}" }]'
-      - name: Compile and test
-        run: mvn -B package
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
 
-      - name: Build Docker image
+      - name: Node ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: npm install and npm run build
+        run: |
+          npm i
+          npm run build
+
+      - name: Build & tag Docker image
         run:
-          cd ui && docker-compose up --build --no-start
+          docker build . --tag ghcr.io/dcsaorg/dcsa-p6-ui:${{ env.DOCKER_TAG_NAME }}
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
@@ -69,9 +73,6 @@ jobs:
         run: |
           echo "labels > ${{ steps.meta.outputs.labels }}"
           echo "tags > ${{ steps.meta.outputs.tags }}"
-
-      - name: tag
-        run: docker tag ui_dcsa-p6-ui ghcr.io/dcsaorg/dcsa-p6-ui:${{ env.DOCKER_TAG_NAME }}
 
       - name: push
         run: docker push ghcr.io/dcsaorg/dcsa-p6-ui:${{ env.DOCKER_TAG_NAME }}
