Add missing codeListName to publisher
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/src/assets/config.json
+++ b/src/assets/config.json
@@ -9,7 +9,8 @@
     "identifyingCodes": [
       {
         "DCSAResponsibleAgencyCode": "SMDG",
-        "partyCode": "MSK"
+        "partyCode": "MSK",
+        "codeListName": "LCL"
       }
     ]
   },
