Also create docker images on publish
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -5,6 +5,9 @@ on:
     branches:
       - master
       - live-*
+  create:
+    tags:
+      - v*
 
 env:
   # Use docker.io for Docker Hub if empty
