--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "@types/node": "18.6.5",
     "codelyzer": "6.0.2",
     "protractor": "7.0.0",
+    "rxjs-tslint": "^0.1.8",
     "ts-node": "10.8.1",
-    "tslint": "6.1.0",
-    "typescript": "4.4.3"
+    "tslint": "^6.1.0",
+    "typescript": "^4.4.3"
   }
 }
